--- a/Tranning/Views/Assign/Index.cshtml
+++ b/Tranning/Views/Assign/Index.cshtml
@@ -9,6 +9,8 @@
 
     bool statusAdd = Convert.ToBoolean(TempData["saveStatus"]);
     bool statusUpdate = Convert.ToBoolean(TempData["UpdateStatus"]);
+    bool statusAdd2 = Convert.ToBoolean(TempData["saveStatus2"]);
+    bool statusUpdate2 = Convert.ToBoolean(TempData["UpdateStatus2"]);
 }
 <div class="row">
     <div class="col-sm-12 col-md-12">
@@ -64,7 +66,7 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var item in Model.Trainee_courseDetailLists)
+                @foreach (var item in Model.tc.Trainee_courseDetailLists)
                 {
                     <tr>
                         <td>@item.traineeName</td>
@@ -73,10 +75,84 @@
                         <td>@item.created_at</td>
                         <td>@item.updated_at</td>
                         <td>
-                            <a class="btn btn-info btn-sm" href="@Url.Action("Update","Category", new { id = @item.id })">Edit</a>
+                            <a class="btn btn-info btn-sm" href="@Url.Action("Update","Assign", new { id = @item.id })">Edit</a>
                         </td>
                         <td>
-                            <a class="btn btn-danger btn-sm" href="@Url.Action("Delete","Category", new { id = @item.id })">Delete</a>
+                            <a class="btn btn-danger btn-sm" href="@Url.Action("Delete","Assign", new { id = @item.id })">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-12 col-md-12">
+        <h4 class="display-6">
+            List Trainer assign to Topic
+        </h4>
+        <a class="btn btn-primary btn-sm" href="@Url.Action("Add2","Assign")"> Add assign trainer to topic </a>
+
+        <form asp-action="#" method="get">
+            <div class="form-actions no-color">
+                <p class="mb-0">
+                    Find by name : <input class="border border-primary rounded" type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+                    <button type="submit" class="btn btn-primary btn-sm mb-0">Search</button>
+                    <a asp-action="Index"> Back to full list</a>
+                </p>
+            </div>
+        </form>
+        <hr />
+
+        @if (TempData["UpdateStatus2"] != null)
+        {
+            @if (statusUpdate2)
+            {
+                <div class="text-success my-2"> Update Successfully</div>
+            }
+            else
+            {
+                <div class="text-danger my-2"> Update Failure</div>
+            }
+        }
+
+        @if (TempData["saveStatus2"] != null)
+        {
+            @if (statusAdd2)
+            {
+                <div class="text-success my-2"> Add Successfully</div>
+            }
+            else
+            {
+                <div class="text-danger my-2"> Add Failure</div>
+            }
+        }
+
+        <table class="table-responsive table">
+            <thead>
+                <tr>
+                    <th>TRAINER</th>
+                    <th>TOPIC</th>
+                    <th>STATUS</th>
+                    <th>CREATED AT</th>
+                    <th>UPDATED AT</th>
+                    <th colspan="2" width="5%">ACTION</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.tt.Trainer_topicDetailLists)
+                {
+                    <tr>
+                        <td>@item.trainerName</td>
+                        <td>@item.topicName</td>
+                        <td>@item.status</td>
+                        <td>@item.created_at</td>
+                        <td>@item.updated_at</td>
+                        <td>
+                            <a class="btn btn-info btn-sm" href="@Url.Action("Update2","Assign", new { id = @item.id })">Edit</a>
+                        </td>
+                        <td>
+                            <a class="btn btn-danger btn-sm" href="@Url.Action("Delete2","Assign", new { id = @item.id })">Delete</a>
                         </td>
                     </tr>
                 }
