--- a/Tranning/Views/Home/Index.cshtml
+++ b/Tranning/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                 <div class="card-body">
                     <h5 class="card-title">@item.name</h5>
                     <p class="card-text">@item.description</p>
-                    <a href="#" class="btn btn-primary">Details</a>
+                        <a href="@Url.Action("CategoryDetail","Home", new { id = @item.id })" class="btn btn-primary">Details</a>
                 </div>
             </div>
         }
