--- a/Tranning/Views/Topic/Add.cshtml
+++ b/Tranning/Views/Topic/Add.cshtml
@@ -36,9 +36,9 @@
                         </div>
                         <div class="col-sm-12 col-md-6">
                             <div class="form-group">
-                                <label asp-for="videos" class="control-label">Videos</label>
-                                <input type="file" class="form-control" asp-for="videos" />
-                                <span class="text-danger" asp-validation-for="videos"></span>
+                                <label asp-for="videoFile" class="control-label">Videos</label>
+                                <input type="file" class="form-control" asp-for="videoFile" />
+                                <span class="text-danger" asp-validation-for="videoFile"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="documentsFile" class="control-label">Documents</label>
