--- a/Tranning/Views/User/Index.cshtml
+++ b/Tranning/Views/User/Index.cshtml
@@ -33,7 +33,7 @@
         {
             @if (statusUpdate)
             {
-                <div class="text-success my-2">@TempData["UpdateStatus"] Update Successfully</div>
+                <div class="text-success my-2">Update Successfully</div>
             }
             else
             {
@@ -49,7 +49,7 @@
             }
             else
             {
-                <div class="text-danger my-2">@TempData["UpdateStatus"] Add Failure</div>
+                <div class="text-danger my-2"> Add Failure</div>
             }
         }
 
