--- a/Tranning/wwwroot/assets/css/soft-ui-dashboard.css
+++ b/Tranning/wwwroot/assets/css/soft-ui-dashboard.css
@@ -45,7 +45,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #f2752a;
+  --bs-primary: #b8046a;
   --bs-secondary: #8392AB;
   --bs-success: #82d616;
   --bs-info: #17c1e8;
@@ -86,7 +86,7 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 1.5rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #f2752a;
+  --bs-link-color: #b8046a;
   --bs-link-hover-color: #830866;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fcf8e3;
@@ -3044,8 +3044,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-  background-color: #f2752a;
-  border-color: #f2752a;
+  background-color: #b8046a;
+  border-color: #b8046a;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -3145,7 +3145,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #f2752a;
+  background-color: #b8046a;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3175,7 +3175,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #f2752a;
+  background-color: #b8046a;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3707,8 +3707,8 @@ fieldset:disabled .btn {
 
 .btn-primary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #f2752a;
-  --bs-btn-border-color: #f2752a;
+  --bs-btn-bg: #b8046a;
+  --bs-btn-border-color: #b8046a;
   --bs-btn-hover-color: #fff;
   --bs-btn-hover-bg: #ad0a87;
   --bs-btn-hover-border-color: #a20a7f;
@@ -3718,8 +3718,8 @@ fieldset:disabled .btn {
   --bs-btn-active-border-color: #980977;
   --bs-btn-active-shadow: none;
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #f2752a;
-  --bs-btn-disabled-border-color: #f2752a;
+  --bs-btn-disabled-bg: #b8046a;
+  --bs-btn-disabled-border-color: #b8046a;
 }
 
 .btn-secondary {
@@ -3859,19 +3859,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #f2752a;
-  --bs-btn-border-color: #f2752a;
+  --bs-btn-color: #b8046a;
+  --bs-btn-border-color: #b8046a;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #f2752a;
-  --bs-btn-hover-border-color: #f2752a;
+  --bs-btn-hover-bg: #b8046a;
+  --bs-btn-hover-border-color: #b8046a;
   --bs-btn-focus-shadow-rgb: 203, 12, 159;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #f2752a;
-  --bs-btn-active-border-color: #f2752a;
+  --bs-btn-active-bg: #b8046a;
+  --bs-btn-active-border-color: #b8046a;
   --bs-btn-active-shadow: none;
-  --bs-btn-disabled-color: #f2752a;
+  --bs-btn-disabled-color: #b8046a;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #f2752a;
+  --bs-btn-disabled-border-color: #b8046a;
   --bs-gradient: none;
 }
 
@@ -4013,7 +4013,7 @@ fieldset:disabled .btn {
 
 .btn-link {
   --bs-btn-font-weight: 400;
-  --bs-btn-color: #f2752a;
+  --bs-btn-color: #b8046a;
   --bs-btn-bg: transparent;
   --bs-btn-border-color: transparent;
   --bs-btn-hover-color: #830866;
@@ -5588,7 +5588,7 @@ fieldset:disabled .btn {
   --bs-pagination-padding-x: 0.75rem;
   --bs-pagination-padding-y: 0.375rem;
   --bs-pagination-font-size: 1rem;
-  --bs-pagination-color: #f2752a;
+  --bs-pagination-color: #b8046a;
   --bs-pagination-bg: #fff;
   --bs-pagination-border-width: 1px;
   --bs-pagination-border-color: #dee2e6;
@@ -5600,8 +5600,8 @@ fieldset:disabled .btn {
   --bs-pagination-focus-bg: #e9ecef;
   --bs-pagination-focus-box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #f2752a;
-  --bs-pagination-active-border-color: #f2752a;
+  --bs-pagination-active-bg: #b8046a;
+  --bs-pagination-active-border-color: #b8046a;
   --bs-pagination-disabled-color: #6c757d;
   --bs-pagination-disabled-bg: #fff;
   --bs-pagination-disabled-border-color: #dee2e6;
@@ -5855,7 +5855,7 @@ fieldset:disabled .btn {
   --bs-progress-border-radius: 0.5rem;
   --bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: #f2752a;
+  --bs-progress-bar-bg: #b8046a;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -5914,8 +5914,8 @@ fieldset:disabled .btn {
   --bs-list-group-disabled-color: #6c757d;
   --bs-list-group-disabled-bg: #fff;
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: #f2752a;
-  --bs-list-group-active-border-color: #f2752a;
+  --bs-list-group-active-bg: #b8046a;
+  --bs-list-group-active-border-color: #b8046a;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -8061,7 +8061,7 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #f2752a !important;
+  color: #b8046a !important;
 }
 
 .link-primary:hover,
@@ -8771,7 +8771,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #f2752a !important;
+  border-color: #b8046a !important;
 }
 
 .border-secondary {
@@ -10580,7 +10580,7 @@ fieldset:disabled .btn {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #f2752a !important;
+  color: #b8046a !important;
 }
 
 .text-secondary {
@@ -10652,7 +10652,7 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #f2752a !important;
+  background-color: #b8046a !important;
 }
 
 .bg-secondary {
@@ -20309,7 +20309,7 @@ fieldset:disabled .btn {
 }
 
 .badge.bg-primary {
-  background: #f2752a;
+  background: #b8046a;
 }
 
 .badge.bg-secondary {
@@ -20462,13 +20462,13 @@ fieldset:disabled .btn {
 
 .btn-primary:hover,
 .btn.bg-gradient-primary:hover {
-  background-color: #f2752a;
-  border-color: #f2752a;
+  background-color: #b8046a;
+  border-color: #b8046a;
 }
 
 .btn-primary .btn.bg-outline-primary,
 .btn.bg-gradient-primary .btn.bg-outline-primary {
-  border: 1px solid #f2752a;
+  border: 1px solid #b8046a;
 }
 
 .btn-primary:not(:disabled):not(.disabled).active,
@@ -20477,8 +20477,8 @@ fieldset:disabled .btn {
 .btn.bg-gradient-primary:not(:disabled):not(.disabled).active,
 .btn.bg-gradient-primary:not(:disabled):not(.disabled):active,
 .show>.btn.bg-gradient-primary.dropdown-toggle {
-  color: color-yiq(#f2752a);
-  background-color: #f2752a;
+  color: color-yiq(#b8046a);
+  background-color: #b8046a;
 }
 
 .btn-primary.focus,
@@ -20496,7 +20496,7 @@ fieldset:disabled .btn {
   background-color: transparent;
   opacity: .75;
   box-shadow: none;
-  color: #f2752a;
+  color: #b8046a;
 }
 
 .btn-secondary:hover,
@@ -21519,8 +21519,8 @@ fieldset:disabled .btn {
 .fixed-plugin .btn.bg-gradient-primary:not(:disabled):not(.disabled):not(.active) {
   background-color: transparent;
   background-image: none;
-  border: 1px solid #f2752a;
-  color: #f2752a;
+  border: 1px solid #b8046a;
+  color: #b8046a;
 }
 
 .fixed-plugin.show .card {
@@ -21806,7 +21806,7 @@ label,
 }
 
 .bg-gradient-faded-primary-vertical {
-  background-image: radial-gradient(200px circle at 50% 70%, rgba(203, 12, 159, 0.3) 0, #f2752a 100%);
+  background-image: radial-gradient(200px circle at 50% 70%, rgba(203, 12, 159, 0.3) 0, #b8046a 100%);
 }
 
 .bg-gradient-faded-secondary-vertical {
@@ -22667,7 +22667,7 @@ html {
 .navbar-vertical.navbar-expand-xs .lavalamp-object {
   width: calc(100% - 1rem) !important;
   background: theme-color("primary");
-  color: color-yiq(#f2752a);
+  color: color-yiq(#b8046a);
   margin-right: 0.5rem;
   margin-left: 0.5rem;
   padding-left: 1rem;
@@ -22766,7 +22766,7 @@ html {
   .navbar-vertical.navbar-expand-sm .lavalamp-object {
     width: calc(100% - 1rem) !important;
     background: theme-color("primary");
-    color: color-yiq(#f2752a);
+    color: color-yiq(#b8046a);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -22866,7 +22866,7 @@ html {
   .navbar-vertical.navbar-expand-md .lavalamp-object {
     width: calc(100% - 1rem) !important;
     background: theme-color("primary");
-    color: color-yiq(#f2752a);
+    color: color-yiq(#b8046a);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -22966,7 +22966,7 @@ html {
   .navbar-vertical.navbar-expand-lg .lavalamp-object {
     width: calc(100% - 1rem) !important;
     background: theme-color("primary");
-    color: color-yiq(#f2752a);
+    color: color-yiq(#b8046a);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -23066,7 +23066,7 @@ html {
   .navbar-vertical.navbar-expand-xl .lavalamp-object {
     width: calc(100% - 1rem) !important;
     background: theme-color("primary");
-    color: color-yiq(#f2752a);
+    color: color-yiq(#b8046a);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -23166,7 +23166,7 @@ html {
   .navbar-vertical.navbar-expand-xxl .lavalamp-object {
     width: calc(100% - 1rem) !important;
     background: theme-color("primary");
-    color: color-yiq(#f2752a);
+    color: color-yiq(#b8046a);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -23186,7 +23186,7 @@ html {
 }
 
 .sidenav[data-color="primary"] .navbar-nav>.nav-item>.nav-link.active .icon {
-  background-image: linear-gradient(310deg, #f2752a 0%, #f2752a 100%);
+  background-image: linear-gradient(310deg, #b8046a 0%, #b8046a 100%);
 }
 
 .sidenav[data-color="secondary"] .navbar-nav>.nav-item>.nav-link.active .icon {
@@ -23331,7 +23331,7 @@ html {
 }
 
 .navbar-vertical .navbar-nav>.nav-item .nav-link.active .icon {
-  background-image: linear-gradient(310deg, #f2752a 0%, #f2752a 100%);
+  background-image: linear-gradient(310deg, #b8046a 0%, #b8046a 100%);
 }
 
 .navbar-vertical .navbar-nav>.nav-item .nav-link.active .icon svg .color-background,
@@ -26048,7 +26048,7 @@ span.flatpickr-weekday {
 .flatpickr-calendar .flatpickr-day.selected,
 .flatpickr-calendar .flatpickr-day.startRange,
 .flatpickr-calendar .flatpickr-day.endRange {
-  background: #f2752a !important;
+  background: #b8046a !important;
   color: #fff;
   border: none;
 }
@@ -26080,7 +26080,7 @@ span.flatpickr-weekday {
 .flatpickr-day.endRange.startRange+.endRange:not(:nth-child(7n+1)),
 .flatpickr-day.selected.startRange+.endRange:not(:nth-child(7n+1)),
 .flatpickr-day.startRange.startRange+.endRange:not(:nth-child(7n+1)) {
-  box-shadow: -10px 0 0 #f2752a;
+  box-shadow: -10px 0 0 #b8046a;
 }
 
 /*! nouislider - 14.6.3 - 11/19/2020 */
